<resources>
    <string name="app_name">WeatherAppUpgraded</string>


    <string name="todayweather">Today Weather</string>
    <string name="weather_in_london_gb">Weather in London,GB</string>
    <string name="_14_c">14 C</string>
    <string name="wind">Wind</string>
    <string name="speed">Speed</string>
    <string name="speed_1_deg_1">Speed : 1 Deg : 1</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="_100">100%</string>
    <string name="sunrise">Sunrise</string>
    <string name="_11_00">11:00</string>
    <string name="sunset">Sunset</string>
    <string name="_18_00">18:00</string>
    <string name="geo_coords">Geo Coords</string>
    <string name="_32_0_81_0">[32.0,-81.0]</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_weather_for_next_5_days">Check weather for next 5 days</string>
    <string name="wednesday">Wednesday</string>
    <string name="vrijeme">vrijeme</string>
    <string name="_35_42">[35.42</string>
    <string name="please_turn_on_location_manually_on_your_device">Please turn on Location manually on your device</string>
</resources>
