<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver"
    android:gravity="center_horizontal"
    tools:context=".TodayWeatherFragment">
    
    
    <LinearLayout
        android:id="@+id/weathger_panel"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_city_name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/blueone"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_in_london_gb" />

        <LinearLayout
            android:orientation="horizontal"
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            
            <ImageView
                android:id="@+id/img_weather"
                android:src="@mipmap/ic_launcher"
                android:layout_width="80dp"
                android:layout_height="80dp" />

            <TextView
                android:id="@+id/txt_tempature"
                android:layout_marginLeft="8dp"
                android:textSize="54sp"
                android:textStyle="bold"
                android:textColor="@color/blueone"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_14_c" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_description"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/blueone"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_14_c" />


        <TextView
            android:id="@+id/txt_date_time"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/blueone"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_in_london_gb" />

        <TableLayout
            android:background="@drawable/border"
            android:layout_marginTop="10dp"
            android:stretchColumns="*"
            android:padding="16dp"



            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:background="@drawable/cell"
                    android:text="@string/wind"
                    android:textColor="@color/blueone"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>


                <TextView
                    android:layout_marginLeft="8dp"
                    android:layout_column="1"
                    android:background="@drawable/cell"
                    android:id="@+id/txt_wind"
                    android:text="@string/speed_1_deg_1"
                    android:textColor="@color/blueone"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:background="@drawable/cell"
                    android:text="@string/pressure"
                    android:textColor="@color/blueone"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>


                <TextView
                    android:layout_marginLeft="8dp"
                    android:layout_column="1"
                    android:background="@drawable/cell"
                    android:id="@+id/txt_wind"
                    android:text="Speed : 1 Deg : 1 "
                    android:textColor="@color/blueone"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

            </TableRow>

        </TableLayout>




    </LinearLayout>




</RelativeLayout>